@startuml
class NavMeshCaster {
    + evaluationDistance : float = 10
    - Awake() : void
    - Start() : void
    - FixedUpdate() : void
    - OnDrawGizmos() : void
    - UpdateNavigation() : void
    - UpdateTargetRoaming() : void
    - UpdateTargetDirect() : void
    + <<override>> GetTargetSpeed() : float
    + <<override>> SetTargetSpeed(speed:float) : void
    + <<override>> SetTargetLocation(position:Vector3) : void
    + <<override>> Halt() : void
}
enum Mode {
    Target,
    Roam,
}
NavigationProvider <|-- NavMeshCaster
NavMeshCaster o-> "mode" Mode
NavMeshCaster --> "_agent" NavMeshAgent
NavMeshCaster --> "_pathVisualizer" PathVisualizer
NavMeshCaster --> "_splineContainer" SplineContainer
NavMeshCaster --> "_streetManager" StreetManager
NavMeshCaster --> "evaluationPoint" Vector3
NavMeshCaster +-- Mode
@enduml
